[package]
name = "fizzbuzz-rs"
version = "0.1.0"
edition = "2021"
description = "An example workshop of building a FizzBuzz application in Rust"
authors = ["Matthew Whitte <mwhite@plex.com>"]
license = "MIT"
keywords = ["fizzbuzz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
